docker starting but its exit status is unhealthy; pom.xml repaired

--- a/nbd_/pom.xml
+++ b/nbd_/pom.xml
@@ -8,6 +8,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <mongodb-driver-sync.version>4.2.3</mongodb-driver-sync.version>
+    <mongodb-crypt.version>1.4.1</mongodb-crypt.version>
+    <logback-classic.version>1.2.9</logback-classic.version>
   </properties>
 
   <dependencies>
