--- a/nbd_/docker/docker-compose.yml
+++ b/nbd_/docker/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       interval: 10s
       timeout: 2s
       retries: 5
+      start_period: 40s
 
   ##initialize mongo replicaset from another container ???
   mongoinit:
