--- a/nbd_/docker/docker-compose.yml
+++ b/nbd_/docker/docker-compose.yml
@@ -1,59 +1,60 @@
-version: '3.8'
+#version: '3.8'
+#
+#services:
+#  db:
+#    image: mongo:5
+#    restart: always
+#    container_name: mongodb
+#    environment:
+#      - MONGO_INITDB_DATABASE=nbddb
+#      - MONGO_INITDB_ROOT_USERNAME=admin
+#      - MONGO_INITDB_ROOT_PASSWORD=adminp
+#    ports:
+#      - '27017:27017'
+#
+#    volumes:
+#      - ./data:/data/db
 
+
+version: '3.8'
 services:
-  db:
-    image: mongo:5
-    restart: always
+  mongo:
+    build: .
+    image: mongocustom:1
     container_name: mongodb
+    hostname: mongodb
+    networks:
+      - mongonet
+    ports:
+      - "27017:27017"
     environment:
       - MONGO_INITDB_DATABASE=nbddb
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=adminp
-    ports:
-      - '27017:27017'
+    command: --config /etc/mongod.conf
+    healthcheck:
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
+      interval: 10s
+      timeout: 2s
+      retries: 5
+      start_period: 40s
 
-    volumes:
-      - ./data:/data/db
+  ##initialize mongo replicaset from another container ???
+  mongoinit:
+    build: .
+    image: mongocustom:1
+    hostname: mongodbinit
+    container_name: mongodbinit
+    networks:
+      - mongonet
+    depends_on:
+      mongo:
+        condition: service_healthy
+    command: >
+      mongosh --host mongodb27017 --username admin --password adminpassword --authenticationDatabase admin --eval
+      '
+      rs.initiate();
+      '
 
-
-#version: '3.8'
-#services:
-#  mongo:
-#    build: .
-#    image: mongocustom:1
-#    container_name: mongodb
-#    hostname: mongodb
-#    networks:
-#      - mongonet
-#    ports:
-#      - "27017:27017"
-#    environment:
-#      - MONGO_INITDB_ROOT_USERNAME=admin
-#      - MONGO_INITDB_ROOT_PASSWORD=adminpassword
-#    command: --config /etc/mongod.conf
-#    healthcheck:
-#      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
-#      interval: 10s
-#      timeout: 2s
-#      retries: 5
-#      start_period: 40s
-#
-#  ##initialize mongo replicaset from another container ???
-#  mongoinit:
-#    build: .
-#    image: mongocustom:1
-#    hostname: mongodbinit
-#    container_name: mongodbinit
-#    networks:
-#      - mongonet
-#    depends_on:
-#      mongo:
-#        condition: service_healthy
-#    command: >
-#      mongosh --host mongodb27017 --username admin --password adminpassword --authenticationDatabase admin --eval
-#      '
-#      rs.initiate();
-#      '
-#
-#networks:
-#  mongonet: {}
+networks:
+  mongonet: {}
