--- a/nbd_/pom.xml
+++ b/nbd_/pom.xml
@@ -43,6 +43,11 @@
       <version>1.18.24</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
   </dependencies>
 
 
