--- a/nbd_/pom.xml
+++ b/nbd_/pom.xml
@@ -11,6 +11,7 @@
     <mongodb-driver-sync.version>4.2.3</mongodb-driver-sync.version>
     <mongodb-crypt.version>1.4.1</mongodb-crypt.version>
     <logback-classic.version>1.2.9</logback-classic.version>
+    <jdkToolsPath
   </properties>
 
   <dependencies>
@@ -31,22 +32,28 @@
       <artifactId>logback-classic</artifactId>
       <version>${logback-classic.version}</version>
     </dependency>
-      <dependency>
+    <dependency>
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
           <version>1.18.24</version>
           <scope>compile</scope>
-      </dependency>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.24</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
       <version>3.1.0</version>
+    </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.13.1</version>
+          <scope>test</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
