--- a/nbd_redis/pom.xml
+++ b/nbd_redis/pom.xml
@@ -82,6 +82,11 @@
       <version>RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>4.2.3</version>
+    </dependency>
   </dependencies>
 
 </project>
