--- a/nbd_redis/docker/docker-compose.yml
+++ b/nbd_redis/docker/docker-compose.yml
@@ -1,54 +1,73 @@
-version: "3.9"
-
+version: '3.9'
 services:
-  redis-cluster_1:
-    image: docker.io/bitnami/redis-cluster:7.0
-    ports:
-      - "7001:7001"
-      - "17001:17001"
-    environment:
-      - REDIS_PORT_NUMBER=7001
-      - REDIS_PASSWORD=master123
-      - REDIS_NODES=redis-cluster_1 redis-cluster_2 redis-cluster_3 redis-cluster_4 redis-cluster_5 redis-cluster_6
-      - REDIS_CLUSTER_ANNOUNCE_PORT=7001
-      - REDIS_CLUSTER_ANNOUNCE_IP=192.168.1.194
-      - REDIS_CLUSTER_BUS_ANNOUNCE_PORT_17001
-      - REDIS_CLUSTER_DYNAMMIC_IPS=no
+  redis-stack:
+    image: redis/redis-stack:latest
     volumes:
-      - type: bind
-        source: ./modules
-        target: /opt/bitnami/redis/modules
-      - type: bind
-        source: ./modules/overrides.conf
-        target: /opt/bitnami/redis/mounted-etc/overrides.conf
+      - redis-stack-data:/bitnami/redis/data
+    ports:
+      - "8001:8001"
+      - "6379:6379"
     networks:
-      redisnetwork:
-        - ipv4_address: 172.27.0.101
+      - redisnet
 
-  redis-cluster-init:
-    image: docker.io/bitnami/redis-cluster:7.0
-    container_name: redis-cluster-init
-    restart: 'no'
-    depends_on:
-      - redis-cluster_1
-      - redis-cluster_2
-      - redis-cluster_3
-      - redis-cluster_4
-      - redis-cluster_5
-      - redis-cluster_6
-    entrypoint: []
-    command:
-      - /bin/bash
-      - -c
-      - redis-cli -a master123 -cluster create 192.168.1.194:7001 192.168.1.194:7002 192.168.1.194:7003 192.168.1.194:7004 192.168.1.194:7005 192.168.1.194:7006 --cluster-replicas 1 --cluster-yes
-    networks:
-      redisnetwork:
-        ipv4_address: 172.27.0.100
+volumes:
+  redis-stack-data:
+    driver: local
 
 networks:
-  redisnetwork:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.27.0.0/16
+  redisnet: {}
+
+#version: "3.9"
+#
+#services:
+#  redis-cluster_1:
+#    image: docker.io/bitnami/redis-cluster:7.0
+#    ports:
+#      - "7001:7001"
+#      - "17001:17001"
+#    environment:
+#      - REDIS_PORT_NUMBER=7001
+#      - REDIS_PASSWORD=master123
+#      - REDIS_NODES=redis-cluster_1 redis-cluster_2 redis-cluster_3 redis-cluster_4 redis-cluster_5 redis-cluster_6
+#      - REDIS_CLUSTER_ANNOUNCE_PORT=7001
+#      - REDIS_CLUSTER_ANNOUNCE_IP=192.168.1.194
+#      - REDIS_CLUSTER_BUS_ANNOUNCE_PORT_17001
+#      - REDIS_CLUSTER_DYNAMMIC_IPS=no
+#    volumes:
+#      - type: bind
+#        source: ./modules
+#        target: /opt/bitnami/redis/modules
+#      - type: bind
+#        source: ./modules/overrides.conf
+#        target: /opt/bitnami/redis/mounted-etc/overrides.conf
+#    networks:
+#      redisnetwork:
+#        - ipv4_address: 172.27.0.101
+#
+#  redis-cluster-init:
+#    image: docker.io/bitnami/redis-cluster:7.0
+#    container_name: redis-cluster-init
+#    restart: 'no'
+#    depends_on:
+#      - redis-cluster_1
+#      - redis-cluster_2
+#      - redis-cluster_3
+#      - redis-cluster_4
+#      - redis-cluster_5
+#      - redis-cluster_6
+#    entrypoint: []
+#    command:
+#      - /bin/bash
+#      - -c
+#      - redis-cli -a master123 -cluster create 192.168.1.194:7001 192.168.1.194:7002 192.168.1.194:7003 192.168.1.194:7004 192.168.1.194:7005 192.168.1.194:7006 --cluster-replicas 1 --cluster-yes
+#    networks:
+#      redisnetwork:
+#        ipv4_address: 172.27.0.100
+#
+#networks:
+#  redisnetwork:
+#    driver: bridge
+#    ipam:
+#      driver: default
+#      config:
+#        - subnet: 172.27.0.0/16
