--- a/nbd_redis/pom.xml
+++ b/nbd_redis/pom.xml
@@ -87,6 +87,11 @@
       <artifactId>jedis</artifactId>
       <version>4.2.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse</groupId>
+      <artifactId>yasson</artifactId>
+      <version>3.0.1</version>
+    </dependency>
   </dependencies>
 
 </project>
