--- a/nbd_redis/pom.xml
+++ b/nbd_redis/pom.xml
@@ -24,6 +24,8 @@
   <properties>
     <maven.compiler.source>18</maven.compiler.source>
     <maven.compiler.target>18</maven.compiler.target>
+    <mongodb-driver-sync.version>4.2.3</mongodb-driver-sync.version>
+    <mongodb-crypt.version>1.4.1</mongodb-crypt.version>
   </properties>
 
   <dependencies>
@@ -92,6 +94,19 @@
       <artifactId>yasson</artifactId>
       <version>3.0.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver-sync</artifactId>
+      <version>${mongodb-driver-sync.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-crypt</artifactId>
+      <version>${mongodb-crypt.version}</version>
+    </dependency>
+
   </dependencies>
 
 </project>
