--- a/nbd_redis/docker/docker-compose.yml
+++ b/nbd_redis/docker/docker-compose.yml
@@ -1,59 +1,32 @@
 version: '3.9'
 services:
 
-  redis-stack:
-    image: redis/redis-stack:latest
+  cassandra1:
+    image: docker.io/bitnami/cassandra:latest
+    hostname: cassandra1
+    ports:
+      - 7000:7000
+      - 9042:9042
     volumes:
-      - redis-stack-data:/bitnami/redis/data
-    ports:
-      - "8001:8001"
-      - "6379:6379"
+      - cassandra1_data:/bitnami
     networks:
-      - redisnet
-
-  mongo:
-    build: .
-    image: mongocustom:1
-    container_name: mongodb
-    hostname: mongodb
-    networks:
-      - mongonet
-    ports:
-      - "27017:27017"
+      - cassandranet
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=adminp
-    command: --config /etc/mongod.conf
-    healthcheck:
-      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
-      interval: 20s
-      timeout: 4s
-      retries: 10
-      start_period: 40s
-
-  ##initialize mongo replicaset from another container ???
-  mongoinit:
-    build: .
-    image: mongocustom:1
-    hostname: mongodbinit
-    container_name: mongodbinit
-    networks:
-      - mongonet
-    depends_on:
-      mongo:
-        condition: service_healthy
-    command: >
-      mongosh --host mongodb:27017 --username admin --password adminp --authenticationDatabase admin --eval
-      '
-      rs.initiate();
-      '
+      - CASSANDRA_LISTEN_ADDRESS=cassandra1
+      - CASSANDRA_BROADCAST_ADDRESS=cassandra1
+      - CASSANDRA_SEEDS=cassandra1,cassandra2
+      - CASSANDRA_CLUSTER_NAME=nbd-cassandra-cluster
+      - CASSANDRA_DATACENTER=dc1
+      - CASSANDRA_PASSWORD_SEEDER=yes
+      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_USER=cassandra
+      - CASSANDRA_PASSWORD=cassandrapassword
+      - MAX_HEAP_SIZE=2G
+      - HEAP_NEWSIZE=200M
 
 volumes:
-  redis-stack-data:
+  cassandra1_data:
     driver: local
 
-
 networks:
-  redisnet: {}
-  mongonet: {}
-
+  cassandranet: { }
