--- a/nbd_redis/pom.xml
+++ b/nbd_redis/pom.xml
@@ -116,6 +116,12 @@
       <artifactId>slf4j-jdk14</artifactId>
       <version>1.7.36</version>
     </dependency>
+
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
+    </dependency>
   </dependencies>
 
 </project>
