connection to cassandra db fixed

--- a/nbd_redis/docker/docker-compose.yml
+++ b/nbd_redis/docker/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     volumes:
       - cassandra1_data:/bitnami
     networks:
-      - cassandranet
+       cassandranet:
+          ipv4_address: 172.24.0.2
     environment:
       - CASSANDRA_LISTEN_ADDRESS=cassandra1
       - CASSANDRA_BROADCAST_ADDRESS=cassandra1
@@ -33,14 +34,15 @@ services:
     volumes:
       - cassandra2_data:/bitnami
     networks:
-      - cassandranet
+      cassandranet:
+        ipv4_address: 172.24.0.3
     environment:
       - CASSANDRA_LISTEN_ADDRESS=cassandra2
       - CASSANDRA_BROADCAST_ADDRESS=cassandra2
       - CASSANDRA_SEEDS=cassandra1,cassandra2
       - CASSANDRA_CLUSTER_NAME=nbd_cassandra_cluster
       - CASSANDRA_DATACENTER=dc1
-      - CASSANDRA_PASSWORD_SEEDER=yes
+      - CASSANDRA_PASSWORD_SEEDER=no
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
       - CASSANDRA_USER=cassandra
       - CASSANDRA_PASSWORD=cassandra
@@ -54,4 +56,9 @@ volumes:
     driver: local
 
 networks:
-  cassandranet: {}
+  cassandranet:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.24.0.0/16
