--- a/nbd_redis/src/main/resources/application.conf
+++ b/nbd_redis/src/main/resources/application.conf
@@ -5,6 +5,6 @@ datastax-java-driver {
             }
     }
     advanced.address-translator {
-        class = Util.CassandraAddressTranslator
+        class = entity.CassandraAddressTranslator
     }
 }
