--- a/kafka_consumer/docker/docker-compose.yml
+++ b/kafka_consumer/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - redisnet
 
   mongo:
-    build: .
+    build: ../../nbd_redis/docker
     image: mongocustom:1
     container_name: mongodb
     hostname: mongodb
@@ -33,7 +33,7 @@ services:
 
   ##initialize mongo replicaset from another container ???
   mongoinit:
-    build: .
+    build: ../../nbd_redis/docker
     image: mongocustom:1
     hostname: mongodbinit
     container_name: mongodbinit
