--- a/kafka_producer/pom.xml
+++ b/kafka_producer/pom.xml
@@ -27,12 +27,12 @@
       <version>4.13.2</version>
       <scope>compile</scope>
     </dependency>
-    <!--    <dependency>-->
-    <!--      <groupId>org.junit.platform</groupId>-->
-    <!--      <artifactId>junit-platform-suite-api</artifactId>-->
-    <!--      <version>1.9.0</version>-->
-    <!--      <scope>test</scope>-->
-    <!--    </dependency>-->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.9.0</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
