--- a/kafka_producer/pom.xml
+++ b/kafka_producer/pom.xml
@@ -14,6 +14,15 @@
     <mongodb-crypt.version>1.4.1</mongodb-crypt.version>
   </properties>
 
+  <repositories>
+
+    <repository>
+      <id>confluent</id>
+      <url>https://packages.confluent.io/maven/</url>
+    </repository>
+
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -42,6 +51,12 @@
       <groupId>org.eclipse</groupId>
       <artifactId>yasson</artifactId>
       <version>3.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>7.0.1-ccs</version>
     </dependency>
 
     <dependency>
